# AgentVerse

./: .env.infrastructure  .gitignore  CLAUDE.md  DATASET_ROADMAP.md  MIGRATION_GUIDE.md  Makefile  OPIK_METRICS_INTEGRATION_DESIGN.md  README-MAKEFILE.md  README.md  SPRINT_LENS_COMPREHENSIVE_FEATURES.md  deploy-infrastructure.sh  docker-compose.infrastructure.yml  docker-compose.yml  package-lock.json  package.json  setup.sh  test_heuristic_metrics.js  update_provider.js
Agents/: README.md  agent_orchestrator.py  test_distributed_tracing.py
Agents/AnalysisAgent/: analysis_agent.py
Agents/DataPipelineAgent/: agent.py  run_pipeline_scenario.py
Agents/DistributedTestAgent/: Dockerfile  agent.py  docker-compose.yml  requirements.txt  run_collaborative_scenario.py
Agents/EcommerceAgents/: .env  base_agent.py  base_agent_sdk.py  coordinator_agent.py  docker-compose.yml  ecommerce_project_config.json  order_coordinator_agent.py  payment_processor_agent.py  setup_project.py  setup_project_sdk.py  test_distributed_tracing.py
Agents/ResearchAgent/: research_agent.py
Agents/SimpleAgent/: .env  .env.example  README.md  enhanced_simple_agent.py  requirements.txt  simple_agent.py  simple_agent_direct.py  test_agent.py
Agents/customer-support-agent/: README.md  pyproject.toml  validate_connection.py
Agents/customer-support-agent/scripts/: verify_setup.py
Agents/customer-support-agent/src/customer_support_agent/: __init__.py
Agents/customer-support-agent/src/customer_support_agent/config/: settings.py  sprintlens_config.py
Agents/customer-support-agent/src/customer_support_agent/examples/: README.md  basic_tracing.py  pattern1_automatic_tracing.py  pattern2_manual_tracing.py  pattern3_context_propagation.py  patterns_comparison.py
Agents/customer-support-agent/src/customer_support_agent/utils/: debug.py
Agents/customer-support-agent/tests/: test_environment.py  test_sdk_connection.py  test_sdk_interactive.py  verify_sdk.py
Agents/k8s/: deploy-agents.sh  document-processing-deployment.yaml  namespace.yaml
Guides/developer/: 01-environment-setup.md  02-sdk-installation.md  03-basic-integration.md  03-sdk-integration-guide.md  04-langgraph-basics.md  05-provider-configuration.md  06-implementing-agent.md  07-validation-and-testing.md  08-simple-agent-build.md  09-autonomous-agent-build.md  10-genai-llm-prompts-continued.md  10-genai-llm-prompts.md  README.md
SprintAgentLens/: Makefile  README.md
SprintAgentLens/agents/: agent_lens_sdk.py  simple_agent.py  test_api.py  test_multithreaded_decorators.py
SprintAgentLens/backend/: .dockerignore  .env.production  Dockerfile  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  docker-compose.production.yml  features.md  migration-plan.md  nginx.conf  package-lock.json  package.json  prometheus.yml  setup-clickhouse.sh  tsconfig.json
SprintAgentLens/frontend/: AGENT_OPS_UX_ENHANCEMENT_SUMMARY.md  AGENT_PLAYGROUND_ARCHITECTURE.md  COMPLETE_UX_DESIGN.md  COMPREHENSIVE_FEATURE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_MANAGEMENT_TOOLS_IMPLEMENTATION.md  EXECUTIVE_SUMMARY.md  MANAGEMENT_TOOLS_AUDIT.md  MCP_INTEGRATION.md  MCP_REGISTRY_ARCHITECTURE.md  PROMPT_ENGINEERING_UX_ENHANCEMENT_SUMMARY.md  UX_DESIGN_SPECIFICATION.md  UX_FEATURE_SPECIFICATION.md  agent_lens_sdk.py  comprehensive_e2e_test.py  comprehensive_system_test.py  comprehensive_test.py  e2e_api_test.py  (+17 more)
SprintAgentLens/frontend-planning/: CONVERSATION_FEATURES_MOCKUPS.md  README.md
Sprint_Lens_SDK/: .coverage  FEATURES_ANALYSIS.md  IMPLEMENTATION_PLAN.md  README.md  USER_STORIES.md  coverage.xml  production_azure_agent.py  production_azure_agent_with_mock.py  pyproject.toml  test_e2e_agent.py  test_g_eval_simple.py  test_sdk_demo.py  test_trace_creation.py
Sprint_Lens_SDK/docs/: API_REFERENCE.md
Sprint_Lens_SDK/examples/: advanced_file_formats_example.py  advanced_metrics_example.py  advanced_search_example.py  answer_relevance_example.py  cloud_storage_comprehensive_example.py  cloud_storage_simple_example.py  collaboration_example.py  collaboration_standalone_test.py  context_precision_example.py  context_recall_example.py  conversation_thread_metrics_example.py  custom_metrics_example.py  custom_model_integration_example.py  data_lineage_example.py  data_profiling_example.py  data_visualization_example.py  dataset_versioning_example.py  file_format_standalone_test.py  format_conversion_example.py  g_eval_example.py  litellm_integration_test.py  moderation_example.py  schema_validation_example.py  simple_advanced_metrics_test.py  smart_detection_example.py  usefulness_example.py
Sprint_Lens_SDK/src/sprintlens/: __init__.py  _logging.py  environment.py  package_version.py  py.typed  version.py
Sprint_Lens_SDK/src/sprintlens/api_objects/: __init__.py  attachment.py
Sprint_Lens_SDK/src/sprintlens/client/: __init__.py  base.py  datasets.py
Sprint_Lens_SDK/src/sprintlens/core/: __init__.py  auth.py  client.py  config.py  constants.py  exceptions.py
Sprint_Lens_SDK/src/sprintlens/evaluation/: __init__.py  advanced_metrics.py  batch.py  dataset.py  evaluator.py  metrics.py  models.py  statistical.py
Sprint_Lens_SDK/src/sprintlens/evaluation/metrics/: __init__.py  base.py  builtin.py  custom.py  llm_based.py
Sprint_Lens_SDK/src/sprintlens/llm/: __init__.py  providers.py
Sprint_Lens_SDK/src/sprintlens/management/: __init__.py  agent_manager.py  distributed_setup.py  project_manager.py
Sprint_Lens_SDK/src/sprintlens/rest_client/: __init__.py  auth.py  client.py  endpoints.py
Sprint_Lens_SDK/src/sprintlens/tracing/: __init__.py  context.py  decorator.py  span.py  trace.py  types.py
Sprint_Lens_SDK/src/sprintlens/utils/: __init__.py  cloud_storage.py  collaboration.py  data_lineage.py  data_profiling.py  data_visualization.py  dataset_versioning.py  datetime.py  file_formats.py  format_converter.py  logging.py  query_builder.py  schema_validation.py  serialization.py  smart_detection.py  validation.py
Sprint_Lens_SDK/tests/: conftest.py  test_feature_parity.py
Sprint_Lens_SDK/tests/unit/test_core/: test_client.py
scripts/: seed-database.js
(+367 files in other folders)
